--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,7 +18,6 @@
     </div>
   </div>
   <%# /画面上部の「人生を変えるフリマアプリ」帯部分  %>
-
   <%# FURIMAが選ばれる3つの理由部分 %>
   <div class='select-reason-contents'>
     <h2 class='title'>
@@ -61,7 +60,6 @@
     </ul>
   </div>
   <%# /FURIMAが選ばれる3つの理由部分 %>
-
   <%# 画面中央の「会員数日本一位」帯部分 %>
   <div class='ad-contents'>
     <h2 class='ad-title'>
@@ -82,7 +80,6 @@
     </div>
   </div>
   <%# /画面中央の「会員数日本一位」帯部分 %>
-
   <%# FURIMAの特徴 %>
   <div class='feature-contents'>
     <h2 class='title'>
@@ -119,67 +116,67 @@
     </ul>
   </div>
   <%# /FURIMAの特徴 %>
-
-  <div class='item-contents'>
+  <%# 商品一覧 %>
+<div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
-      <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
-      <ul class='item-lists'>
-
-    <% unless @items == nil %>
-      <% @items.each do |item| %>
-        <li class='list'>
-          <%= link_to item_path(item.id) do %>
-          <div class='item-img-content'>
-            <%= image_tag item.image, class: "item-img" %>
-            
-            <% if item.order != nil %>
-            <div class='sold-out'>
-              <span>Sold Out!!</span>
-            </div>
-            <% end %>
-
-          </div>
-          <div class='item-info'>
-            <h3 class='item-name'>
-              <%= item.title %>
-            </h3>
-            <div class='item-price'>
-              <span><%= item.price %>円<br>(税込み)</span>
-              <div class='star-btn'>
-                <%= image_tag "star.png", class:"star-icon" %>
-                <span class='star-count'>0</span>
-              </div>
-            </div>
+    <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
+    <ul class='item-lists'>
+      <% if @items.length != 0 %>
+      <% @items.each do |item|%>
+      <li class='list'>
+        <%= link_to item_path(item.id) do %>
+        <div class='item-img-content'>
+          <%= image_tag item.image, class: "item-img" %>
+          <%# sold outの表示 %>
+          <% if item.order != nil %>
+          <div class='sold-out'>
+            <span>Sold Out!!</span>
           </div>
           <% end %>
-        </li>
-      <% end %>      
-    <% else %>
-        <li class='list'>
-          <%= link_to '#' do %>
-          <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
-          <div class='item-info'>
-            <h3 class='item-name'>
-              商品を出品してね！
-            </h3>
-            <div class='item-price'>
-              <span>99999999円<br>(税込み)</span>
-              <div class='star-btn'>
-                <%= image_tag "star.png", class:"star-icon" %>
-                <span class='star-count'>0</span>
-              </div>
+        </div>
+        <div class='item-info'>
+          <h3 class='item-name'>
+            <%= item.title %>
+          </h3>
+          <div class='item-price'>
+            <span><%= item.price %>円<br><%= item.shipping_fee_status_id %></span>
+            <div class='star-btn'>
+              <%= image_tag "star.png", class:"star-icon" %>
+              <span class='star-count'>0</span>
             </div>
           </div>
-          <% end %>
-        </li>
-    <% end %>
+        </div>
+        <% end %>
+      </li>
+      <% end %>
+      <% end %>
+      <%# 商品がない場合のダミー %>
+      <% if @items.length == 0%>
+      <li class='list'>
+        <%= link_to '#' do %>
+        <%= image_tag "https://tech-master.s3.amazonaws.com/uploads/curriculums/images/Rails1-4/sample.jpg", class: "item-img" %>
+        <div class='item-info'>
+          <h3 class='item-name'>
+            商品を出品してね！
+          </h3>
+          <div class='item-price'>
+            <span>99999999円<br>(税込み)</span>
+            <div class='star-btn'>
+              <%= image_tag "star.png", class:"star-icon" %>
+              <span class='star-count'>0</span>
+            </div>
+          </div>
+        </div>
+        <% end %>
+      </li>
+      <% end %>
+      <%# //商品がない場合のダミー %>
     </ul>
   </div>
+  <%# //商品一覧 %>
 </div>
-<div class='purchase-btn'>
-    <%= link_to new_item_path, class: "purchase-btn-text" do %>
-    <p>出品する</p>
-    <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-    <% end %>
-</div>
+<%= link_to(new_item_path, class: 'purchase-btn') do %>
+  <span class='purchase-btn-text'>出品する</span>
+  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+<% end %>
 <%= render "shared/footer" %>
