--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -18,6 +18,7 @@
     </div>
   </div>
   <%# /画面上部の「人生を変えるフリマアプリ」帯部分  %>
+
   <%# FURIMAが選ばれる3つの理由部分 %>
   <div class='select-reason-contents'>
     <h2 class='title'>
@@ -60,6 +61,7 @@
     </ul>
   </div>
   <%# /FURIMAが選ばれる3つの理由部分 %>
+
   <%# 画面中央の「会員数日本一位」帯部分 %>
   <div class='ad-contents'>
     <h2 class='ad-title'>
@@ -80,6 +82,7 @@
     </div>
   </div>
   <%# /画面中央の「会員数日本一位」帯部分 %>
+
   <%# FURIMAの特徴 %>
   <div class='feature-contents'>
     <h2 class='title'>
@@ -116,6 +119,7 @@
     </ul>
   </div>
   <%# /FURIMAの特徴 %>
+
   <%# 商品一覧 %>
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
@@ -128,8 +132,8 @@
         <%= link_to item_path(item.id) do %>
         <div class='item-img-content'>
           <%= image_tag item.image, class: "item-img" %>
-          <%# if item.order  %>
-          <%#div class='sold-out'>
+          <% if item.order  %>
+           <div class='sold-out'>
             <span>Sold Out!!</span>
           </div>
           <% end %>
