--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,4 @@
 <%= render "shared/header" %>
-
 <%# 商品の概要 %>
 <div class="item-show">
   <div class="item-box">
@@ -22,6 +21,7 @@
         <%= @item.bearer.name %>
       </span>
     </div>
+    
      <% if user_signed_in? %>
        <% if current_user.id == @item.user_id %>
          <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
@@ -29,7 +29,7 @@
          <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
        <% elsif @item.order.present? %>
        <% else %>
-        <%= link_to "購入画面に進む", item_orders_path(@item.id) ,class:"item-red-btn"%>
+        <%= link_to "購入画面に進む", "#" ,class:"item-red-btn"%>
       <% end %>
     <% end %>
     <div class="item-explain-box">
